unpackaged/main/default/objects/Service_Level_Price__c/Service_Level_Price__c.object-meta.xml
<CustomObject>
    <label>Service Level Price</label>
    <nameField>
        <displayFormat>LvlSP-{000000000}</displayFormat>
        <label>Service Level Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Level Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>