unpackaged/main/default/objects/Service_Level_Price__c/fields/Conversion_rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_rate__c</fullName>
    <formula>CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>