unpackaged/main/default/objects/Service_Level_Price__c/fields/Data_Recovery_Mapping_Code__c.field-meta.xml
<CustomField>
    <fullName>Data_Recovery_Mapping_Code__c</fullName>
    <description>W-001916 champ créé pour interfacer Zoura</description>
    <label>Data Recovery Mapping Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>