unpackaged/main/default/objects/Service_Level_Price__c/fields/Discount_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Discount_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Schedule</label>
    <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
    <relationshipLabel>Service Level Prices</relationshipLabel>
    <relationshipName>Service_Level_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>