unpackaged/main/default/objects/Service_Level_Price__c/fields/Max_UpperBound__c.field-meta.xml
<CustomField>
    <fullName>Max_UpperBound__c</fullName>
    <formula>BLANKVALUE(Upper_Bound__c, 999999999999999)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max UpperBound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>