unpackaged/main/default/objects/Service_Level_Price__c/fields/Maximum_Price__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Price__c</fullName>
    <inlineHelpText>In the case of Excess Charge for a Product with Excess Pricing Method Type equals to 'Capped', it is necessary to fill a Maximum Price on the Charge Service Level Price Records OR a Product Maximum Quantity.</inlineHelpText>
    <label>Maximum Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>