unpackaged/main/default/objects/Service_Level_Price__c/fields/Percent_of_Target_Product__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Target_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Percent of Target Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Level Prices (Percent of Target Product)</relationshipLabel>
    <relationshipName>Service_Level_Prices1</relationshipName>
    <type>Lookup</type>
</CustomField>