unpackaged/main/default/objects/Service_Level_Price__c/fields/Percent_of_Total_Field__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Total_Field__c</fullName>
    <label>Percent of Total Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Percent_of_Total_Field</valueSetName>
    </valueSet>
</CustomField>