unpackaged/main/default/objects/Service_Level_Price__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Service Level Prices</relationshipLabel>
    <relationshipName>Service_Level_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>