unpackaged/main/default/objects/Service_Level_Price__c/fields/Price_by_SLP__c.field-meta.xml
<CustomField>
    <fullName>Price_by_SLP__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price by SLP</label>
    <type>Checkbox</type>
</CustomField>