unpackaged/main/default/objects/Service_Level_Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Level Prices</relationshipLabel>
    <relationshipName>Service_Level_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>