unpackaged/main/default/objects/Service_Level_Price__c/fields/RecordKey__c.field-meta.xml
<CustomField>
    <fullName>RecordKey__c</fullName>
    <label>RecordKey</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>