unpackaged/main/default/objects/Service_Level_Price__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <formula>Product__r.Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Number</label>
    <type>Text</type>
</CustomField>