unpackaged/main/default/objects/Service_Level_Price__c/fields/RegularPrice__c.field-meta.xml
<CustomField>
    <fullName>RegularPrice__c</fullName>
    <label>Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>