unpackaged/main/default/objects/Service_Level_Price__c/fields/Sales_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Sales_Purpose__c</fullName>
    <label>Sales Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Purpose</valueSetName>
    </valueSet>
</CustomField>