unpackaged/main/default/objects/Service_Level_Price__c/fields/Sales_Purposes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Purposes__c</fullName>
    <label>Sales Purposes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Purpose</valueSetName>
    </valueSet>
</CustomField>