unpackaged/main/default/objects/Service_Level_Price__c/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <label>Service Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceLevel</valueSetName>
    </valueSet>
</CustomField>