unpackaged/main/default/objects/Service_Level_Price__c/fields/SLP_Identifier_Key__c.field-meta.xml
<CustomField>
    <fullName>SLP_Identifier_Key__c</fullName>
    <label>SLP Identifier Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>