unpackaged/main/default/objects/Service_Level_Price__c/fields/Tech_CPQ_Id__c.field-meta.xml
<CustomField>
    <fullName>Tech_CPQ_Id__c</fullName>
    <label>Tech CPQ Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>