unpackaged/main/default/objects/Service_Level_Price__c/fields/TECH_ProductGolbalPricing__c.field-meta.xml
<CustomField>
    <fullName>TECH_ProductGolbalPricing__c</fullName>
    <formula>Product__r.Product_Line__r.Global_Pricing_Management__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_ProductGolbalPricing</label>
    <type>Checkbox</type>
</CustomField>