unpackaged/main/default/objects/Service_Level_Price__c/fields/Tech_Upper_Bound__c.field-meta.xml
<CustomField>
    <fullName>Tech_Upper_Bound__c</fullName>
    <formula>IF(not(Upper_Bound__c &gt;0),99999999, Upper_Bound__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Upper Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>