unpackaged/main/default/objects/Service_Level_Price__c/fields/ZuoraChargeId__c.field-meta.xml
<CustomField>
    <fullName>ZuoraChargeId__c</fullName>
    <label>Zuora charge id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>