unpackaged/main/default/objects/Service_Level_Price__c/recordTypes/Block_Pricing.recordType-meta.xml
<RecordType>
    <fullName>Block_Pricing</fullName>
    <active>true</active>
    <label>Block Pricing</label>
</RecordType>