unpackaged/main/default/objects/Service_Level_Price__c/recordTypes/List_Pricing.recordType-meta.xml
<RecordType>
    <fullName>List_Pricing</fullName>
    <active>true</active>
    <label>List Pricing</label>
</RecordType>