unpackaged/main/default/objects/Service_Level_Price__c/validationRules/VR002_RecordType_Parent_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR002_RecordType_Parent_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR( AND(RecordType.DeveloperName == 'Block_Pricing', NOT(ISPICKVAL(Product__r.SBQQ__PricingMethod__c,'Block')) ),AND(RecordType.DeveloperName == 'List_Pricing',ISPICKVAL(Product__r.SBQQ__PricingMethod__c,'Block')))</errorConditionFormula>
    <errorMessage>For a Block Priced Product, you must create Block Pricing Service Level Prices. In another hand, for a List Priced Product, you must create List Pricing Service Level Prices. Please, verify the chosen Record Type.</errorMessage>
</ValidationRule>