unpackaged/main/default/objects/Service_Level_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Price_Book__c</columns>
    <columns>RegularPrice__c</columns>
    <columns>Discount_Schedule__c</columns>
    <columns>Reference_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>